--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/faker": "^6.6.9",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.4",
